# funcx_tests

./: README.md  command  test
ml/: command
ml/funcXtraining/: README.md  setup.cfg
ml/funcXtraining/condor/: job.jdl  job2.jdl  job_eval_photon.jdl  job_eval_photon_step2.jdl  job_eval_pion.jdl  job_train_photon.jdl  job_train_photon_step2.jdl  job_train_pion.jdl  wrapper.sh
ml/funcXtraining/config/: config_BS128.json  config_GANv1.json  config_dglam.json  config_hpo10.json  config_hpo11.json  config_hpo16.json  config_hpo17.json  config_hpo19.json  config_hpo22.json  config_hpo23.json  config_hpo24.json  config_hpo25.json  config_hpo26.json  config_hpo28.json  config_hpo30.json  config_hpo4.1.json  config_hpo4.3.json  config_hpo5.json  config_hpo7.json  config_hpo8.json  config_hpo9.json  config_latent01.json
ml/funcXtraining/training/: collect.py  common.py  data.py  develop.ipynb  evaluate.py  model.py  setup.sh  test_train1.py  train.py  train1.py
ml/funcXtraining/training/config/: config_hpo1.json  config_hpo12.json  config_hpo13.json  config_hpo14.json  config_hpo15.json  config_hpo2.json  config_hpo20.json  config_hpo21.json  config_hpo27.json  config_hpo29.json  config_hpo3.json  config_hpo4.2.json  config_hpo4.4.json  config_hpo4.5.json  config_hpo6.json
normal/: oidc_token  pandaJobData.out  pilot-wrapper.sh  queuedata.json  runpilot2-wrapper.sh.2  test.sh  test1.sh  test_func_from_string.py  test_funcx.py  test_funcx1.py  test_funcx2.py  test_funcx_check_jobs.py  test_get_job.py  test_parsl_funcx.py  test_parsl_funcx1.py  test_parsl_funcx2.py  (+1 more)
(+19 files in other folders)
