[metadata]
name = training
version = 0.0.1
author = example author
author_email = example@email.com
description = My package description
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    matplotlib
    numpy
    h5py == 2.10.0
    tensorflow-macos;platform_system=='MacOS'
    tensorflow == 2.4.1;platform_system=='Linux'
    tensorflow-addons == 0.14.0
    pandas
    quickstats
    funcx
